--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -61,6 +61,10 @@ h1 {
     border: none;
     cursor: pointer;
     margin: auto;
+    padding: 0;
+    position:relative;
+    font-size: 24px;
+    height: 29px;
 }
 
 .dropbtn:hover, .dropbtn:focus {
@@ -68,9 +72,12 @@ h1 {
 }
 
 .dropdown {
+    margin-top: 0;
     margin-right: 3%;
     position: relative;
     display: inline-block;
+    font-size: 24px;
+    height: 29px;
 }
 
 .dropdown-content {
@@ -81,7 +88,6 @@ h1 {
     left: 50%;
     transform: translateX(-50%);
     overflow: auto;
-    /* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); */
     z-index: 1;
     border-radius: 0px 0px 10px 10px;
 
@@ -92,8 +98,23 @@ h1 {
     padding: 12px 16px;
     display: flex;
     justify-content: center;
+    margin: auto;
 }
 
 .dropdown a:hover {background-color: #ddd;}
 
 .show {display: block;}
+
+
+@media (max-width: 768px) {
+    h1 {
+        font-size: 35px;
+        text-align: left;
+        padding-top: 30px;
+        text-align: center;
+    }
+
+    .nav {
+        display: none;
+    }
+}
