--- a/movie/movie.css
+++ b/movie/movie.css
@@ -22,6 +22,10 @@ html{
     border-radius: 20px;
 }
 
+.box.white-mode {
+    background-color: aqua;
+}
+
 .genres {
     display: flex;
     flex-direction: column;
