--- a/css/styles.css
+++ b/css/styles.css
@@ -249,6 +249,7 @@ li {
       flex-direction: column;
       align-items: center;
       text-align: center;
+      margin-top: 0px;
     }
 
     .content.contact {
