--- a/css/hangman.css
+++ b/css/hangman.css
@@ -51,6 +51,11 @@
     /* margin-bottom: 20px; */
 }
 
+.dt {
+    margin-bottom: 10px;
+    /* margin-top: 10px; */
+}
+
 .num_of_chars_box {
     display: flex;
     justify-content: center;
@@ -97,12 +102,30 @@
 }
 
 .letter {
-    background-color: #121212;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* margin: 0 5px; */
+    
+    background-color: #1b1b1b;
     border: none;
+    border-width: 1px;
+    border-style: solid;
+    border-color:#2b2a2a;
+    border-radius: 5px;
+
+    /* width: 1.5rem; */
+    /* height: 30px; */
+    
     color: #e4dfdf;
-    padding: 0.7rem;
     font-size: 1.2rem;
     cursor: pointer;
+
+    /* padding-top: 1.2rem; */
+    margin: 0 auto;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    width: auto;
 }
 
 @media (max-width: 768px) {
