--- a/css/hangman.css
+++ b/css/hangman.css
@@ -18,12 +18,12 @@
     justify-content: center;
     align-items: center;
     margin: 0 10px;
-    /* margin: 0 auto; */
+    max-width: 220px;
 }
 
 .button {
     width: 100px;
-    height: 35px;
+    height: 40px;
     margin: 0 auto;
     border-radius: 15px;
     border-style:none;
@@ -65,8 +65,6 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    margin-top: 20px;
-    margin-bottom: 20px;
     padding: 10px;
     border: 1px solid #545151;
     border-radius: 5px;
@@ -76,6 +74,7 @@
     font-weight: bold;
     width: 8%;
     max-width: 300px;
+    margin-left: 15px;
     /* margin: 0 auto; */
     /* margin-left: 0px; */
 }
@@ -138,5 +137,8 @@
     }
     .letter {
         padding: 0.3rem;
+    }
+    .button {
+        margin-top: 15px;
     }
 }
