--- a/css/sdr.css
+++ b/css/sdr.css
@@ -49,4 +49,12 @@
     .sdr-image {
         width: 80%;
     }
+
+    .content {
+        flex-direction: column;
+        align-items: center;
+        text-align:justify;
+        margin-top: 10px;
+        font-size: 16px;
+      }
 }
