footer style added

--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -1,6 +1,9 @@
 body {
     margin: 0;
-    padding: 20px;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
     background-color: #121212;
     color: #BDBDBD;
     font-family: 'Lato', sans-serif;
@@ -20,6 +23,8 @@ h1 {
 .container {
     max-width: 1000px;
     margin: 0 auto;
+    padding: 20px;
+    flex-grow: 1;
 }
 
 .container a {
@@ -196,6 +201,18 @@ h1 {
     background: #6d3b3b;
 }
 
+
+.footer {
+    width: 100%;
+    text-align: center;
+    font-size: calc(8px + 0.5vw);
+    padding: 20px 0;
+    color: inherit;
+}
+
+.footer p {
+    margin: 0;
+}
 
 @media (max-width: 768px) {
     h1 {
