--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -1,12 +1,16 @@
 body {
     margin: 0;
     padding: 0;
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
     min-height: 100vh;
     background-color: #121212;
     color: #BDBDBD;
     font-family: 'Lato', sans-serif;
+    
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 0px 20px 0 20px;
 }
 
 body.white-mode {
@@ -20,24 +24,18 @@ h1 {
     padding-top: 50px;
 }
 
-.container {
-    max-width: 1000px;
-    margin: 0 auto;
-    padding: 20px;
-    flex-grow: 1;
-}
 
-.container a {
+body a {
     text-decoration: none;
     color: #ffffff;
 }
 
-.container a:hover,
+body a:hover,
 .nav a:hover {
     text-decoration: underline;
 }
 
-.container.white-mode a {
+body.white-mode a {
     color: #6d3b3b;
 }
 
@@ -203,22 +201,16 @@ h1 {
 
 
 .footer {
-    width: 100%;
     text-align: center;
     font-size: calc(8px + 0.5vw);
-    padding: 20px 0;
-    color: inherit;
-}
-
-.footer p {
-    margin: 0;
+    min-height: 50px;
 }
 
 @media (max-width: 768px) {
     h1 {
         font-size: 35px;
         text-align: left;
-        padding-top: 30px;
+        padding-top: 50px;
         text-align: center;
     }
     .desktop {
@@ -228,7 +220,7 @@ h1 {
         display: block;
     }
 
-    .container {
+    body {
         margin: 0;
     }
 
