--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -30,6 +30,11 @@ body a {
     color: #ffffff;
 }
 
+body .content a {
+    text-decoration: none;
+    color: #dadada;
+}
+
 body a:hover,
 .nav a:hover {
     text-decoration: underline;
